--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "workspaces": {
+    "nohoist": [
+      "**/tailwindcss",
+      "**/@tailwindcss/**"
+    ]
+  },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "next": "12.1.6",
