--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nodemailer": "^6.7.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-mouse-particles": "^1.1.5"
+    "react-mouse-particles": "^1.1.5",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
